# blockberry-editor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
blockberry-zephyr-demo/: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
blockberry-zephyr-demo/boards/: stm32wb5mmg.overlay  stm32wba65i_dk1.conf  stm32wba65i_dk1.overlay
blockberry-zephyr-demo/configs/: ble.conf  host.conf
blockberry-zephyr-demo/dts/bindings/misc/: zephyr,irq-reservation.yaml
blockberry-zephyr-demo/include/: berry_conf.h  berry_repl.h  repl_transport.h
blockberry-zephyr-demo/src/: berry_port.c  berry_repl.c  ble_nus.c  main.c  repl_transport.c
blockberry-zephyr-demo/tools/: build-host.sh  ws-bridge.ts
docs/: simulator.md
src/: berry_generator.ts  blocks.ts  index.ts  toolbox.ts
test/: berry_generator.test.ts  simulator.test.ts
web/: main.ts  styles.css
web/repl/: client.ts  panel.ts
web/simulator/: engine.ts  panel.ts
